Update for compatibility with inngest-spring-boot-adapter:0.2.0