@@ -20,13 +20,19 @@ repositories {
 }
 
 dependencies {
-    implementation("com.inngest:inngest-spring-boot-adapter:0.0.6")
-    implementation("com.inngest:inngest:0.1.0")
+    implementation("com.inngest:inngest-spring-boot-adapter:0.2.0")
 
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("com.squareup.okhttp3:okhttp:4.12.0")
 
     testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.12.0")
+
+    if (JavaVersion.current().isJava11Compatible) {
+        testImplementation("uk.org.webcompere:system-stubs-jupiter:2.1.6")
+    } else {
+        testImplementation("uk.org.webcompere:system-stubs-jupiter:1.2.1")
+    }
 }
 
 dependencyManagement {
@@ -40,6 +46,11 @@ dependencyManagement {
 tasks.withType<Test> {
     useJUnitPlatform()
     systemProperty("junit.jupiter.execution.parallel.enabled", true)
+    systemProperty("test-group", "unit-test")
+
+    // Required by `system-stubs-jupiter` for JDK 21+ compatibility
+    // https://github.com/raphw/byte-buddy/issues/1396
+    jvmArgs = listOf("-Dnet.bytebuddy.experimental=true")
     testLogging {
         events =
             setOf(
